<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:orientation="vertical"
    android:background="@drawable/ark"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main_Activity">



    <Spinner
        android:id="@+id/spinnerana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fffff9df"
        />

    <CheckBox
        android:id="@+id/rastgele"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rastgele"
        android:gravity="center"
        android:checked="true"
        android:background="#ffb1ffd6"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        />

    <RadioGroup
        android:id="@+id/valueRadioGroup"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:background="#fff3ffe6"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/ingturk"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/ingturk"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/turking"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/turking"
            android:textSize="20sp"
            />
    </RadioGroup>

    <Button
        android:id="@+id/antrenman"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/antrenman"
        android:background="#ff56db41"
        android:drawableLeft="@drawable/start"
        android:drawableRight="@drawable/start"
        android:gravity="center"

        />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        >

        <Button
            android:id="@+id/grupekle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/grupekle"
            android:layout_weight="0.5"
            android:layout_margin="0dp"
            android:drawableLeft="@drawable/plus"
            android:background="#ff5ecaff"
            />
        <Button
            android:id="@+id/kelimeekle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/kelimeekle"
            android:layout_weight="0.5"
            android:layout_margin="0dp"
            android:drawableLeft="@drawable/plus"
            android:background="#ff76dbff"/>


        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">


    <Button
        android:id="@+id/gruplarigor"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/gruplar"
        android:layout_margin="0dp"
        android:layout_weight="0.5"
        android:drawableLeft="@drawable/edit"
        android:background="#ff75dca2"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/delete"
        android:layout_margin="0dp"
        android:layout_weight="0.5"
        android:drawableLeft="@drawable/delete"
        android:background="#ff7defaf"/>

    </LinearLayout>


    </LinearLayout>
